
2016-01-08  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* call.c (cob_call): fr #101 - allow more parameters for CALL 
	  (COB_MAX_FIELD_PARAMS to be one of 16/36/56/76/96)

2015-12-31  Edward Hart <edward.dan.hart@gmail.com>

	* common.h: added COB_SCREEN_GRID.

2015-12-30  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: fixed bug #176 - added code to correctly find the line and
	  column of a screen item.
	* common.h: changed cob_screen to a doubly linked list (to simplify the
	  algorithm required above).

2015-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: added SYSTEM-OFFSET and support for unknown offsets for
	  FORMATTED-(DATE)TIME.

2015-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: implemented FULL and REQUIRED clauses.

2015-12-14  Brian Tiffin <btiffin@gnu.org>

	* numeric.c (cob_print_realbin): bug #171 - unsigned values fail with high bit set

2015-12-07  Edward Hart <edward.dan.hart@gmail.com>

	* common.c (cob_get_current_date_and_time): fixed bug where offset_known
	  was not set to 1 on Unix systems.

2015-12-07  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed bug #170 - added detection of whether offset_known
	  is true or not - and added detection of EC-IMP-UTC-UNKNOWN exception.
	* exception.def: added EC-IMP-UTC-UNKNOWN.

2015-12-05  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: added support for optional offset parameter for
	  FORMATTED-(DATE)TIME functions (defaults to zero).

2015-12-03  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed bug #169 - added correct implementation of times
	  ending with Z (i.e. to return the UTC time).

2015-11-08  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* intrinsic.c (cob_intr_current_date): bug #164 - offset for CURRENT-DATE

2015-10-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_check_linkage): add function for check of linkage items